<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rate_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/rd_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:src="@drawable/rate_stars" />

    <TextView
        android:id="@+id/rd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/rate_app"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rd_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_rate_msg"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/rate_msg"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/rd_btn_remind_later"
            style="@style/RateDialogButtonStyle"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/remind_later" />

        <Button
            android:id="@+id/rd_btn_not_good"
            style="@style/RateDialogButtonStyle"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/not_good"
            android:visibility="gone" />

        <Button
            android:id="@+id/rd_btn_good"
            style="@style/RateDialogButtonStyle"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/good_5_stars" />
    </LinearLayout>
</LinearLayout>